<resources>

<!--    注册常量-->
    <string name="app_name">caishifu</string>
    <string name="title_activity_flash">菜师傅</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="registering">正在注册...</string>
    <string name="password_rules">密码长度必须满足6-16位</string>
    <string name="register_failed">注册失败，请重试</string>
    <string name="user_exists">用户已存在</string>
    <string name="account_or_password_error">账号或密码错误，请重新填写</string>
    <string name="nick_name_example">例如：菜师傅</string>
    <string name="nick_name">昵称</string>
    <string name="login_hint_phone">您的手机号码</string>
    <string name="login_hint_password">填写密码</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="verification_code">验证码</string>
    <string name="hint_verification_code">填写验证码</string>
    <string name="obtain_verification_code">获取验证码</string>
    <string name="confirm_delete">确认删除?</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="go_setting">去设置</string>

<!--   登录常量 -->
    <string name="login_via_account_password">帐号登录</string>
    <string name="login_via_verification_code">验证码登录</string>
    <string name="enter_mobile_number">请填写手机号</string>
    <string name="telephone">手机号</string>
    <string name="account">帐号</string>
    <string name="use_verification_code_login">手机验证码登录</string>
    <string name="use_account_password_login">密码登录</string>
    <string name="please_wait">请稍候...</string>
    <string name="logging_in">正在登录...</string>
    <string name="login_failed">登录失败，请重试</string>
    <string name="delay_obtain_verification_code"> s后重新获取验证码</string>
    <string name="retry_obtain_verification_code">重新获取验证码</string>
    <string name="obtain_verification_code_failed">获取验证码失败</string>

    <!--  permission  -->
    <string name="request_permission">权限设置</string>
    <string name="request_permission_location">在设置-应用-菜师傅-权限中开启位置信息权限，以正常使用位置共享</string>
    <string name="request_permission_camera">在设置-应用-菜师傅-权限中开启相机权限，以正常使用拍照、小视频、扫一扫等功能</string>
    <string name="request_permission_storage">为确保接收到的图片、视频等内容能被正常浏览，菜师傅需要申请手机存储权限。</string>
    <string name="request_permission_record_audio">在设置-应用-菜师傅-权限中开启麦克风权限，以正常使用语音功能</string>
    <string name="request_permission_contacts">在设置-应用-菜师傅-权限中开启通讯录权限，以正常使用联系人查找功能</string>

    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <!--动态相关-->
    <string name="tab_discover">发现</string>
    <string name="vegetable_market">菜市场</string>
    <string name="publish_vegetable_info">发布</string>
    <string name="vegetable_market_buyer">买菜</string>
    <string name="vegetable_market_seller">卖菜</string>
    <string name="user_settings">资料设置</string>
    <string name="send">发送</string>
    <string name="show_more">全文</string>
    <string name="show_less">收起</string>
    <string name="delete">删除</string>
    <string name="tab_chats">菜师傅</string>
    <string name="tab_me">我</string>
    <string name="connect_to_server_error">网络连接异常</string>
    <string name="edit_contact">设置备注和标签</string>
    <string name="tag">标签</string>
    <string name="description">描述</string>
    <string name="add_description">添加更多备注信息</string>
    <string name="moments">菜市场</string>
    <string name="more_info">更多信息</string>
    <string name="send_message">发送消息</string>
    <string name="voice_or_video_call">音视频通话</string>
    <string name="blocked_contact_tips">已添加至黑名单，你将不再收到对方的消息</string>
    <string name="add_star">设为星标朋友</string>
    <string name="block_contact">加入黑名单</string>
    <string name="report">投诉</string>
    <string name="complete">完成</string>

    <string name="remark_name">备注名</string>
    <string name="sort_friend_by_tag">添加标签对联系人进行分类</string>
    <string name="phone_num">电话号码</string>
    <string name="add_phone_num">添加电话号码</string>

    <string name="add_tag">添加标签</string>
    <string name="all_tag">所有标签</string>
    <string name="save">保存</string>
    <string name="call">呼叫</string>
    <string name="copy">拷贝</string>
    <!--用户设置-->
    <string name="personal_info">个人信息</string>
    <string name="avatar">头像</string>
    <string name="caishifu_id">菜师傅号</string>
    <string name="phone_id">手机号</string>
    <string name="more">更多</string>
    <string name="my_address">我的地址</string>
    <string name="sex">性别</string>
    <string name="region">地区</string>
    <string name="whats_up">个性签名</string>

    <string name="edit_name">更改名字</string>
    <string name="edit_caishifu_id">更改手机号</string>
    <string name="set_gender">设置性别</string>
    <string name="saving">保存</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>

    <string name="add_address">新增地址</string>
    <string name="modify_address">修改地址</string>
    <string name="add_address_abandon_tips">是否放弃新增地址信息？</string>
    <string name="modify_address_abandon_tips">是否放弃修改地址信息？</string>

    <string name="tips">提示</string>
    <string name="update_user_properties_failed">个人信息修改失败，请重试</string>
    <string name="update_user_properties_success">个人信息修改成功</string>

    <string name="update_user_avatar_failed">修改头像失败，请重试</string>
    <string name="update_user_avatar_success">修改头像成功</string>

    <string name="tips_delete_image">拖动到此处删除</string>
    <string name="tips_delete_image_delete">松手即可删除</string>

    <string name = "radish">萝卜</string>
    <string name="cabbage">白菜</string>

    <string name="picture">图片</string>
    <string name="buyInfo">买菜信息</string>
    <string name="sellInfo">卖菜信息</string>
    <string name="add_sell_vegetable_abandon_tips">是否放弃新增卖菜信息？</string>
    <string name="add_buy_vegetable_abandon_tips">是否放弃新增买菜信息？</string>
    <string name="product_price_unit">元/斤</string>
    <string name="product_supply_unit">斤</string>
    <string name="supply">供</string>
    <string name="product_name_list">菜单</string>
    <string name="product_name">名称</string>
    <string name="product_supply">日供货量</string>
</resources>

